Revert "Updating to Specification (1)"
This reverts commit 38505989e3182f1c82fc7b105347910ddff9a2f2.

--- a/memberProfile.html
+++ b/memberProfile.html
@@ -53,38 +53,35 @@
         <h1>Edit Profile</h1>
       </div>
       <div class="profileContent">
-        <img class="rounded" src="res/imgs/imageLargeSquare.jpg" alt="Profile Picture">
+        <img class="rounded" src="res/imgs/imageLargeSquare.jpg" alt="profile picture">
         <div class="userInformation">
           <div class="row">
             <div class="input-group">
-              <span>Name</span>
-              <input type="text" name="" value="John Smith">
+              <span>First Name</span>
+              <input type="text" name="" value="John">
             </div>
+            <div class="input-group">
+              <span>Last Name</span>
+              <input type="text" name="" value="Smith">
+            </div>
+          </div>
+          <div class="row">
             <div class="input-group">
               <span>Age</span>
               <input type="text" name="" value="18">
+            </div>
+            <div class="input-group">
+              <span>Activity</span>
+              <select class="" name="">
+                <option class="active" value="active">Active</option>
+                <option class="semi-active" value="active">Semi-Active</option>
+                <option class="inactive" value="active">Inactive</option>
+              </select>
             </div>
           </div>
           <div class="input-group">
             <span>Email</span>
             <input type="text" name="" value="loremipsum@dolor.sit">
-          </div>
-          <div class="row">
-            <div class="input-group">
-              <span>Newsletter</span>
-              <select class="" name="">
-                <option value="active">Consented</option>
-                <option value="active">Not Consented</option>
-              </select>
-            </div>
-            <div class="input-group">
-              <span>Activity</span>
-              <select class="" name="">
-                <option value="active">Active</option>
-                <option value="semi-active">Semi-Active</option>
-                <option value="inactive">Inactive</option>
-              </select>
-            </div>
           </div>
           <div class="buttonGroup">
             <button class="btn-approve bg-stretch" type="button" name="saveProfile">Save</button>
@@ -101,12 +98,16 @@
       </div>
       <div class="content-vertical">
         <figure>
-          <img alt="Profile Activity Graph" src="res/imgs/imageWideRectangle.jpg" alt="">
-          <figcaption>Profile Activity Graph</figcaption>
+          <img src="res/imgs/imageWideRectangle.jpg" alt="">
+          <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit</figcaption>
         </figure>
         <figure>
-          <img alt="Profile Engagement Graph" src="res/imgs/imageWideRectangle.jpg" alt="">
-          <figcaption>Profile Engagement Graph</figcaption>
+          <img src="res/imgs/imageWideRectangle.jpg" alt="">
+          <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit</figcaption>
+        </figure>
+        <figure>
+          <img src="res/imgs/imageWideRectangle.jpg" alt="">
+          <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit</figcaption>
         </figure>
       </div>
       <div class="sectionFooter"></div>
