--- a/members.html
+++ b/members.html
@@ -56,6 +56,7 @@
               <th class="pictureCell">Picture</th>
               <th>Name</th>
               <th>Age</th>
+              <th>Gender</th>
               <th>Email</th>
               <th class="textCell">Reason for Joining</th>
               <th>Status</th>
@@ -66,6 +67,7 @@
               <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
               <td>John Smith</td>
               <td>18</td>
+              <td>Male</td>
               <td>loremipsum@latin.ipsum</td>
               <td>Vestibulum in nunc felis. Vestibulum eu risus metus, vitae imperdiet sapien? In aliquam posuere bibendum. Phasellus iaculis, sem ut vulputate porta, arcu urna porta dui, non adipiscing justo augue in elit. Pellentesque ut augue sit amet dui vestibulum ultrices! Fusce sagittis aliquam neque, a congue tellus eleifend ac. Nullam a lobortis diam? Morbi fringilla, ipsum vitae tincidunt consequat; nibh erat posuere augue; rutrum fringilla ipsum neque auctor nisi.</td>
               <td>
@@ -79,6 +81,7 @@
               <td><img class="rounded"  src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
               <td>John Smith</td>
               <td>18</td>
+              <td>Male</td>
               <td>loremipsum@latin.ipsum</td>
               <td>Vestibulum in nunc felis. Vestibulum eu risus metus, vitae imperdiet sapien? In aliquam posuere bibendum. Phasellus iaculis, sem ut vulputate porta, arcu urna porta dui, non adipiscing justo augue in elit. Pellentesque ut augue sit amet dui vestibulum ultrices! Fusce sagittis aliquam neque, a congue tellus eleifend ac. Nullam a lobortis diam? Morbi fringilla, ipsum vitae tincidunt consequat; nibh erat posuere augue; rutrum fringilla ipsum neque auctor nisi.</td>
               <td>
@@ -90,8 +93,6 @@
             </tr>
           </tbody>
         </table>
-        <div class="sectionFooter"></div>
-
       </section>
       <section id="members">
         <div class="sectionHeader">
@@ -117,7 +118,7 @@
               <td><span class="active">Active</span></td>
               <td>
                 <div class="buttonGroup">
-                  <a class="btn btn-edit" href="memberProfile.html">Manage</a>
+                  <button class="btn-edit" type="button" name="editProfile"><a href="memberProfile.html">Edit</a></button>
                   <button class="btn-deny" type="button" name="deleteMember">Delete</button>
                 </div>
               </td>
@@ -130,7 +131,7 @@
               <td><span class="semi-active">Semi-Active</span></td>
               <td>
                 <div class="buttonGroup">
-                  <a class="btn btn-edit" href="memberProfile.html">Manage</a>
+                  <button class="btn-edit" type="button" name="editProfile"><a href="memberProfile.html">Edit</a></button>
                   <button class="btn-deny" type="button" name="deleteMember">Delete</button>
                 </div>
               </td>
@@ -143,7 +144,7 @@
               <td><span class="inactive">Inactive</span></td>
               <td>
                 <div class="buttonGroup">
-                  <a class="btn btn-edit" href="memberProfile.html">Manage</a>
+                  <button class="btn-edit" type="button" name="editProfile"><a href="memberProfile.html">Edit</a></button>
                   <button class="btn-deny" type="button" name="deleteMember">Delete</button>
                 </div>
               </td>
@@ -156,7 +157,7 @@
               <td><span class="active">Active</span></td>
               <td>
                 <div class="buttonGroup">
-                  <a class="btn btn-edit" href="memberProfile.html">Manage</a>
+                  <button class="btn-edit" type="button" name="editProfile"><a href="memberProfile.html">Edit</a></button>
                   <button class="btn-deny" type="button" name="deleteMember">Delete</button>
                 </div>
               </td>
@@ -169,7 +170,7 @@
               <td><span class="active">Active</span></td>
               <td>
                 <div class="buttonGroup">
-                  <a class="btn btn-edit" href="memberProfile.html">Manage</a>
+                  <button class="btn-edit" type="button" name="editProfile"><a href="memberProfile.html">Edit</a></button>
                   <button class="btn-deny" type="button" name="deleteMember">Delete</button>
                 </div>
               </td>
@@ -182,14 +183,13 @@
               <td><span class="semi-active">Active</span></td>
               <td>
                 <div class="buttonGroup">
-                  <a class="btn btn-edit" href="memberProfile.html">Manage</a>
+                  <button class="btn-edit" type="button" name="editProfile"><a href="memberProfile.html">Edit</a></button>
                   <button class="btn-deny" type="button" name="deleteMember">Delete</button>
                 </div>
               </td>
             </tr>
           </tbody>
         </table>
-        <div class="sectionFooter"></div>
       </section>
     </main>
   </body>
