Updating to Specification (2)
Updating and designing pages for specification

--- a/announcements.html
+++ b/announcements.html
@@ -64,21 +64,21 @@
         <div class="sectionHeader">
           <h1>Announcements</h1>
         </div>
-        <div class="">
+        <div>
           <table>
             <thead>
               <tr>
-                <th>Date</th>
                 <th>Title</th>
+                <th>Date</th>
                 <th>Information</th>
                 <th>Manage</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>01/01/1970</td>
                 <td>Lorem ipsum dolor sit amet</td>
-                <td>consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</td>
+                <td>01/01/1970</td>
+                <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cil.</td>
                 <td>
                   <div class="buttonGroup">
                     <button class="btn-edit" type="button" name="button">Edit</button>
@@ -87,9 +87,9 @@
                 </td>
               </tr>
               <tr>
-                <td>01/01/1970</td>
                 <td>Lorem ipsum dolor sit amet</td>
-                <td>consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</td>
+                <td>01/01/1970</td>
+                <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cil.</td>
                 <td>
                   <div class="buttonGroup">
                     <button class="btn-edit" type="button" name="button">Edit</button>
@@ -98,9 +98,9 @@
                 </td>
               </tr>
               <tr>
-                <td>01/01/1970</td>
                 <td>Lorem ipsum dolor sit amet</td>
-                <td>consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</td>
+                <td>01/01/1970</td>
+                <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cil.</td>
                 <td>
                   <div class="buttonGroup">
                     <button class="btn-edit" type="button" name="button">Edit</button>
@@ -134,16 +134,54 @@
             <p>75%</p>
           </div>
           <figure>
-            <img src="res/imgs/imageWideRectangle.jpg" alt="">
-            <figcaption>Lorem ipsum dolor sit amet</figcaption>
+            <img src="res/imgs/imageWideRectangle.jpg" alt="Graph representing the ratio of members subscribed">
+            <figcaption>Graph representing the ratio of members subscribed</figcaption>
           </figure>
         </div>
 
       </aside>
       <section id="createAnnouncements">
         <div class="sectionHeader">
-          <h1>New Announcement</h1>
+          <h1>Create a new Announcement</h1>
         </div>
+        <form action="announcements.html" method="post">
+          <div class="newsPost-contents">
+            <div class="newsPost-info">
+              <h2>Enter information to submit the Announcement</h2>
+              <p>Submitting as User<br>AdminUser123</p>
+            </div>
+            <div class="row">
+              <div class="input-group row-span">
+                <label for="newAnnounce-title">Announcement Title</label>
+                <input type="text" id="newAnnounce-title" name="newAnnounce-title" placeholder="Enter Title...">
+              </div>
+            </div>
+            <div class="input-group-vertical">
+              <label for="news-edit-content" class="span-top">Announcement Contents</label>
+              <div class="container">
+                <textarea id="news-edit-content" name="news-edit-content" rows="4" maxlength="300" placeholder="Enter Announcement Post (max 300 characters)"></textarea>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-group">
+                <label for="newAnnounce-release_date">Release Date</label>
+                <input type="date" id="newAnnounce-release_date" name="newAnnounce-release_date">
+              </div>
+              <div class="input-group">
+                <label for="newAnnounce-release_date">Attachment</label>
+                <input class="ye" type="file" name="" value="">
+                <!-- <input type="date" id="newAnnounce -release_date" name="newAnnounce-release_date" value=""> -->
+              </div>
+            </div>
+          </div>
+          <div class="sectionFooter">
+            <div class="buttonGroup">
+              <button class="btn-approve" type="submit">Create Announcement</button>
+              <a class="btn btn-edit" href="announcements.html">Cancel Announcement</a>
+            </div>
+          </div>
+        </form>
+
       </section>
     </main>
   </body>
