--- a/newsfeed.html
+++ b/newsfeed.html
@@ -1,148 +1,172 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Newsfeed | OUWC</title>
-    <link rel="stylesheet" href="res/css/style.css">
-  </head>
-  <body>
-    <nav class="nav-mainMenu">
-      <ul class="nav">
-        <li class="nav-logo">
-          <a href="#">
-            <img src="res/imgs/imageLargeSquare.jpg" alt="">
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">
-            <img src="res/imgs/imageSmallSquare.jpg" alt="">
-            <span>Home</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="members.html">
-            <img src="res/imgs/imageSmallSquare.jpg" alt="">
-            <span>Members</span>
-          </a>
-        </li>
-        <li class="nav-item nav-item-active">
-          <a class="nav-link" href="announcements.html">
-            <img src="res/imgs/imageSmallSquare.jpg" alt="">
-            <span>News & Announcements</span>
-          </a>
-          <ul class="nav-dropdown">
-            <li class="nav-item  nav-subitem-active">
-              <a class="nav-link" href="newsfeed.html">
-                <img src="res/imgs/imageSmallSquare.jpg" alt="">
-                <span>News Feed</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="announcements.html">
-                <img src="res/imgs/imageSmallSquare.jpg" alt="">
-                <span>Announcements</span>
-              </a>
-            </li>
-           </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="members.html">
-            <img src="res/imgs/imageSmallSquare.jpg" alt="">
-            <span>Events</span>
-          </a>
-        </li>
-        <li class="nav-item nav-bottom">
-          <a class="nav-link" href="#">
-            <img src="res/imgs/imageSmallSquare.jpg" alt="">
-            <span>Logout</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
 
-    <main id="main-news">
-      <section id="newsfeed">
-        <div class="sectionHeader">
-          <h1>Newsfeed</h1>
-        </div>
-        <div class="news">
-          <div class="news-contents">
-            <table>
-              <tbody>
-                <tr>
-                  <td><h2>Title</h2></td>
-                  <td><h3>Date</h3></td>
-                  <td><h3>Contents</h3></td>
-                </tr>
-              </tbody>
-            </table>
-            <div class="buttonGroup">
-              <button class="btn-edit" type="button" name="button">Edit</button>
-              <button class="btn-deny" type="button" name="button">Delete</button>
-            </div>
-          </div>
-        </div>
-        <div class="news">
-          <div class="news-contents">
-            <table>
-              <tbody>
-                <tr>
-                  <td><h2>Title</h2></td>
-                  <td><h3>Date</h3></td>
-                  <td><h3>Contents</h3></td>
-                </tr>
-              </tbody>
-            </table>
-            <div class="buttonGroup">
-              <button class="btn-edit" type="button" name="button">Edit</button>
-              <button class="btn-deny" type="button" name="button">Delete</button>
-            </div>
-          </div>
-          <div class="event-edit event-selected">
-              <div class="news-edit-input">
-                <div class="input-group">
-                  <span>Title</span>
-                  <input type="text" name="" value="Roe Green">
-                </div>
-                <div class="input-group-vertical">
-                  <span class="span-top">Content</span>
-                  <div class="container">
-                    <textarea name="name" rows="6" cols="120">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea>
+<head>
+  <meta charset="utf-8">
+  <title>Newsfeed | OUWC</title>
+  <link rel="stylesheet" href="res/css/style.css">
+</head>
+
+<body>
+  <nav class="nav-mainMenu">
+    <ul class="nav">
+      <li class="nav-logo">
+        <a href="#">
+          <img src="res/imgs/imageLargeSquare.jpg" alt="">
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <img src="res/imgs/imageSmallSquare.jpg" alt="">
+          <span>Home</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="members.html">
+          <img src="res/imgs/imageSmallSquare.jpg" alt="">
+          <span>Members</span>
+        </a>
+      </li>
+      <li class="nav-item nav-item-active">
+        <a class="nav-link" href="announcements.html">
+          <img src="res/imgs/imageSmallSquare.jpg" alt="">
+          <span>News & Announcements</span>
+        </a>
+        <ul class="nav-dropdown">
+          <li class="nav-item  nav-subitem-active">
+            <a class="nav-link" href="newsfeed.html">
+              <img src="res/imgs/imageSmallSquare.jpg" alt="">
+              <span>News Feed</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="announcements.html">
+              <img src="res/imgs/imageSmallSquare.jpg" alt="">
+              <span>Announcements</span>
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="members.html">
+          <img src="res/imgs/imageSmallSquare.jpg" alt="">
+          <span>Events</span>
+        </a>
+      </li>
+      <li class="nav-item nav-bottom">
+        <a class="nav-link" href="#">
+          <img src="res/imgs/imageSmallSquare.jpg" alt="">
+          <span>Logout</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+
+  <main id="main-news">
+    <section id="newsfeed">
+      <div class="sectionHeader">
+        <h1>Newsfeed</h1>
+      </div>
+      <table>
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Posted By</th>
+            <th>Release Date</th>
+            <th>Expiry Date</th>
+            <th>Contents</th>
+            <th>Manage</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">Running for Gold</th>
+            <td>username123</td>
+            <td>20/05/2020</td>
+            <td>04/06/2020</td>
+            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cil.</td>
+            <td>
+              <div class="buttonGroup-vertical">
+                <button class="btn-edit" type="button" name="news-edit">Edit Post</button>
+                <button class="btn-deny" type="button" name="news-edit">Delete Post</button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">Running for Gold</th>
+            <td>username123</td>
+            <td>20/05/2020</td>
+            <td>04/06/2020</td>
+            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cil.</td>
+            <td>
+              <button class="btn-chevron" type="button" name="news-hide-edit"><img src="res/imgs/chevron-down.png" alt="down arrow"></button>
+            </td>
+          </tr>
+          <tr class="news-selected">
+            <td colspan="5">
+              <div class="news-edit">
+                <div class="news-edit-input">
+                  <div class="row">
+                    <div class="input-group">
+                      <label for="news-edit-title">Title</label>
+                      <input type="text" name="news-edit-title" value="Running for Gold">
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="input-group">
+                      <label for="news-edit-release_date">Release Date</label>
+                      <input type="date" name="news-edit-release_date" value="2020-05-20">
+                    </div>
+                    <div class="input-group">
+                      <label for="news-edit-expiry_date">Expiry Date</label>
+                      <input type="date" name="news-edit-expiry_date" value="2020-06-04">
+                    </div>
+                  </div>
+                  <div class="input-group-vertical">
+                    <label for="news-edit-content" class="span-top">Content</label>
+                    <div class="container">
+                      <textarea name="news-edit-content" rows="4"
+                        maxlength="300">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cil.</textarea>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="buttonGroup">
-                <button class="btn-approve" type="button" name="button">Save</button>
-                <button class="btn-edit" type="button" name="button">Cancel</button>
-                <button class="btn-deny" type="button" name="button">Delete</button>
-              </div>
-            </div>
-        </div>
-        <div class="news">
-          <div class="news-contents">
-            <table>
-              <tbody>
-                <tr>
-                  <td><h2>Title</h2></td>
-                  <td><h3>Date</h3></td>
-                  <td><h3>Contents</h3></td>
-                </tr>
-              </tbody>
-            </table>
-            <div class="buttonGroup">
-              <button class="btn-edit" type="button" name="button">Edit</button>
-              <button class="btn-deny" type="button" name="button">Delete</button>
-            </div>
-          </div>
-        </div>
+              <td>
+                <div class="buttonGroup-vertical">
+                  <button class="btn-approve" type="button" name="button">Save Post</button>
+                  <button class="btn-edit" type="button" name="button">Cancel Edit</button>
+                  <button class="btn-deny" type="button" name="button">Delete Post</button>
+                </div>
+              </td>
+            </td>
 
-        <div class="sectionFooter">
-          <div class="buttonGroup">
-            <button class="btn-approve" type="button" name="button">Create News</button>
-            <button class="btn-deny" type="button" name="button">Clear Newsfeed</button>
-          </div>
+          </tr>
+          <tr>
+            <th scope="row">Running for Gold</th>
+            <td>username123</td>
+            <td>20/05/2020</td>
+            <td>04/06/2020</td>
+            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cil.</td>
+            <td>
+              <div class="buttonGroup-vertical">
+                <button class="btn-edit" type="button" name="news-edit">Edit Post</button>
+                <button class="btn-deny" type="button" name="news-edit">Delete Post</button>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="sectionFooter">
+        <div class="buttonGroup">
+          <a class="btn btn-approve" href="createNewsPost.html">Create New Post</a>
+          <button class="btn-deny" type="button" name="button">Clear Newsfeed</button>
         </div>
-      </section>
-    </main>
-  </body>
+      </div>
+    </section>
+  </main>
+</body>
+
 </html>
