Completion for Question 1
Question 1 completed. May change a few styling things and do a repass for accessibility

--- a/announcements.html
+++ b/announcements.html
@@ -71,80 +71,40 @@
           <thead>
             <tr>
               <th>Title</th>
-              <th>Date</th>
+              <th>Release Date</th>
               <th>Information</th>
-              <th>Manage</th>
             </tr>
           </thead>
           <tbody>
+            <tr class="news-selected-darker">
+              <td>Lorem ipsum dolor sit amet</td>
+              <td>01/01/1970</td>
+              <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cil.</td>
+
+            </tr>
+
             <tr>
               <td>Lorem ipsum dolor sit amet</td>
               <td>01/01/1970</td>
               <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 Duis aute irure dolor in reprehenderit in voluptate velit esse cil.</td>
-              <td>
-                <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="button">Edit</button>
-                  <button class="btn-deny" type="button" name="button">Delete</button>
-                </div>
-              </td>
+
             </tr>
             <tr>
               <td>Lorem ipsum dolor sit amet</td>
               <td>01/01/1970</td>
               <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 Duis aute irure dolor in reprehenderit in voluptate velit esse cil.</td>
-              <td>
-                <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="button">Edit</button>
-                  <button class="btn-deny" type="button" name="button">Delete</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>Lorem ipsum dolor sit amet</td>
-              <td>01/01/1970</td>
-              <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cil.</td>
-              <td>
-                <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="button">Edit</button>
-                  <button class="btn-deny" type="button" name="button">Delete</button>
-                </div>
-              </td>
+
             </tr>
           </tbody>
         </table>
       </div>
-    </section>
-    <aside>
-      <div class="sectionHeader">
-        <h1>Statistics</h1>
-      </div>
-      <div class="information">
-        <div class="informationRow">
-          <h2>Announcements</h2>
-          <p>3</p>
-        </div>
-        <div class="informationRow">
-          <h2>People Subscribed</h2>
-          <p>1000</p>
-        </div>
-        <div class="informationRow">
-          <h2>% People not Subscribed</h2>
-          <p>75%</p>
-        </div>
-        <div class="informationRow">
-          <h2>Lorem Ipsum Sia Dia</h2>
-          <p>75%</p>
-        </div>
-        <figure>
-          <img src="res/imgs/imageWideRectangle.jpg" alt="Graph representing the ratio of members subscribed">
-          <figcaption>Graph representing the ratio of members subscribed</figcaption>
-        </figure>
-      </div>
+      <div class="sectionFooter">
 
-    </aside>
+      </div>
+    </section>
     <section id="createAnnouncements">
       <div class="sectionHeader">
         <h1>Create a new Announcement</h1>
@@ -181,8 +141,8 @@
         </div>
         <div class="sectionFooter">
           <div class="buttonGroup">
-            <button class="btn-approve" type="submit">Create Announcement</button>
-            <a class="btn btn-edit" href="announcements.html">Cancel Announcement</a>
+            <button class="btn-approve" type="submit">Send Announcement</button>
+            <a class="btn btn-edit" href="announcements.html">Cancel</a>
           </div>
         </div>
       </form>
