--- a/members.html
+++ b/members.html
@@ -55,7 +55,6 @@
             <tr>
               <th class="pictureCell">Picture</th>
               <th>Name</th>
-              <th>Age</th>
               <th>Email</th>
               <th class="textCell">Reason for Joining</th>
               <th>Status</th>
@@ -65,7 +64,6 @@
             <tr>
               <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
               <td>John Smith</td>
-              <td>18</td>
               <td>loremipsum@latin.ipsum</td>
               <td>Vestibulum in nunc felis. Vestibulum eu risus metus, vitae imperdiet sapien? In aliquam posuere bibendum. Phasellus iaculis, sem ut vulputate porta, arcu urna porta dui, non adipiscing justo augue in elit. Pellentesque ut augue sit amet dui vestibulum ultrices! Fusce sagittis aliquam neque, a congue tellus eleifend ac. Nullam a lobortis diam? Morbi fringilla, ipsum vitae tincidunt consequat; nibh erat posuere augue; rutrum fringilla ipsum neque auctor nisi.</td>
               <td>
@@ -78,7 +76,6 @@
             <tr>
               <td><img class="rounded"  src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
               <td>John Smith</td>
-              <td>18</td>
               <td>loremipsum@latin.ipsum</td>
               <td>Vestibulum in nunc felis. Vestibulum eu risus metus, vitae imperdiet sapien? In aliquam posuere bibendum. Phasellus iaculis, sem ut vulputate porta, arcu urna porta dui, non adipiscing justo augue in elit. Pellentesque ut augue sit amet dui vestibulum ultrices! Fusce sagittis aliquam neque, a congue tellus eleifend ac. Nullam a lobortis diam? Morbi fringilla, ipsum vitae tincidunt consequat; nibh erat posuere augue; rutrum fringilla ipsum neque auctor nisi.</td>
               <td>
@@ -115,19 +112,6 @@
               <td>Loremipsum@dolol.sit</td>
               <td>01/01/1970</td>
               <td><span class="active">Active</span></td>
-              <td>
-                <div class="buttonGroup">
-                  <a class="btn btn-edit" href="memberProfile.html">Manage</a>
-                  <button class="btn-deny" type="button" name="deleteMember">Delete</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
-              <td>John Smith</td>
-              <td>Loremipsum@dolol.sit</td>
-              <td>01/01/1970</td>
-              <td><span class="semi-active">Semi-Active</span></td>
               <td>
                 <div class="buttonGroup">
                   <a class="btn btn-edit" href="memberProfile.html">Manage</a>
@@ -179,7 +163,7 @@
               <td>John Smith</td>
               <td>Loremipsum@dolol.sit</td>
               <td>01/01/1970</td>
-              <td><span class="semi-active">Active</span></td>
+              <td><span class="inactive">Inactive</span></td>
               <td>
                 <div class="buttonGroup">
                   <a class="btn btn-edit" href="memberProfile.html">Manage</a>
