(Question 2) Completed basic wireframe (add walk)
Wireframe for add walk complete

--- a/Question 1/announcements.html
+++ b/Question 1/announcements.html
@@ -63,7 +63,7 @@
   </nav>
   <main id="announcements">
     <section id="announcementsFeed">
-      <div class="sectionHeader">
+      <div class="section-header">
         <h1>Announcements</h1>
       </div>
       <div>
@@ -101,12 +101,12 @@
           </tbody>
         </table>
       </div>
-      <div class="sectionFooter">
+      <div class="section-footer">
 
       </div>
     </section>
     <section id="createAnnouncements">
-      <div class="sectionHeader">
+      <div class="section-header">
         <h1>Create a new Announcement</h1>
       </div>
       <form action="announcements.html" method="post">
@@ -139,7 +139,7 @@
             </div>
           </div>
         </div>
-        <div class="sectionFooter">
+        <div class="section-footer">
           <div class="buttonGroup">
             <button class="btn-approve" type="submit">Send Announcement</button>
             <a class="btn btn-edit" href="announcements.html">Cancel</a>
