--- a/Question 1/events.html
+++ b/Question 1/events.html
@@ -55,7 +55,7 @@
     </nav>
     <main id="main-events">
       <section id="events">
-        <div class="sectionHeader">
+        <div class="section-header">
           <h1>Events</h1>
         </div>
         <!-- This is for Screenreader accessibility  -->
@@ -163,7 +163,7 @@
           </div>
         </div>
 
-        <div class="sectionFooter">
+        <div class="section-footer">
           <div class="buttonGroup">
             <button class="btn-approve" type="button" name="button">New Event</button>
             <button class="btn-deny" type="button" name="button">Clear Events</button>
