--- a/Question 1/home.html
+++ b/Question 1/home.html
@@ -72,7 +72,7 @@
 
   <main id="main-home">
     <section class="row-span">
-      <div class="sectionHeader">
+      <div class="section-header">
         <h1>Welcome back %AdminUser%</h1>
       </div>
       <div class="section-contents">
@@ -93,7 +93,7 @@
           </figure>
         </div>
       </div>
-      <div class="sectionFooter">
+      <div class="section-footer">
       </div>
     </section>
   </main>
