--- a/Question 1/index.html
+++ b/Question 1/index.html
@@ -14,7 +14,7 @@
 	</header>
 	<main id="main-login">
 		<section id="login">
-			<div class="sectionHeader">
+			<div class="section-header">
 				<h1>Admin Login</h1>
 			</div>
 			<form action="home.html" method="post">
@@ -35,7 +35,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="sectionFooter">
+				<div class="section-footer">
 					<div class="buttonGroup">
 						<button class="btn btn-approve" type="submit">Login</button>
 						<a class="btn btn-deny" href="#">Return</a>
