--- a/Question 1/memberProfile.html
+++ b/Question 1/memberProfile.html
@@ -49,7 +49,7 @@
   </nav>
   <main class="container">
     <section id="editProfile">
-      <div class="sectionHeader">
+      <div class="section-header">
         <h1>Edit Profile</h1>
       </div>
       <div class="profileContent">
@@ -93,10 +93,10 @@
           </div>
         </div>
       </div>
-      <div class="sectionFooter"></div>
+      <div class="section-footer"></div>
     </section>
     <aside class="profileInformation">
-      <div class="sectionHeader">
+      <div class="section-header">
         <h1>Profile Stats</h1>
       </div>
       <div class="content-vertical">
@@ -109,10 +109,10 @@
           <figcaption>Profile Engagement Graph</figcaption>
         </figure>
       </div>
-      <div class="sectionFooter"></div>
+      <div class="section-footer"></div>
     </aside>
     <section id="walkingStats">
-      <div class="sectionHeader">
+      <div class="section-header">
         <h1>Walking Stats</h1>
       </div>
       <div class="content">
@@ -183,7 +183,7 @@
           </tbody>
         </table>
       </div>
-      <div class="sectionFooter"></div>
+      <div class="section-footer"></div>
 
     </section>
   </main>
