--- a/Question 1/members.html
+++ b/Question 1/members.html
@@ -47,7 +47,7 @@
     </nav>
     <main id="main-members">
       <section id="memberApproval">
-        <div class="sectionHeader">
+        <div class="section-header">
           <h1>Awaiting Approval</h1>
         </div>
         <table>
@@ -87,11 +87,11 @@
             </tr>
           </tbody>
         </table>
-        <div class="sectionFooter"></div>
+        <div class="section-footer"></div>
 
       </section>
       <section id="members">
-        <div class="sectionHeader">
+        <div class="section-header">
           <h1>Members</h1>
         </div>
         <table>
@@ -173,7 +173,7 @@
             </tr>
           </tbody>
         </table>
-        <div class="sectionFooter"></div>
+        <div class="section-footer"></div>
       </section>
     </main>
   </body>
