--- a/Question 1/newsfeed.html
+++ b/Question 1/newsfeed.html
@@ -64,7 +64,7 @@
 
   <main id="main-news">
     <section id="newsfeed">
-      <div class="sectionHeader">
+      <div class="section-header">
         <h1>Newsfeed</h1>
       </div>
       <table>
@@ -159,7 +159,7 @@
           </tr>
         </tbody>
       </table>
-      <div class="sectionFooter">
+      <div class="section-footer">
         <div class="buttonGroup">
           <a class="btn btn-approve" href="createNewsPost.html">Create New Post</a>
           <button class="btn-deny" type="button" name="button">Clear Newsfeed</button>
@@ -167,7 +167,7 @@
       </div>
     </section>
     <section>
-      <div class="sectionHeader">
+      <div class="section-header">
         <h1>Create News Post</h1>
       </div>
       <form action="newsfeed.html" method="post">
@@ -202,7 +202,7 @@
           <!-- </div> -->
         </div>
 
-        <div class="sectionFooter">
+        <div class="section-footer">
           <div class="buttonGroup">
             <button class="btn-approve" type="submit">Create Post</button>
             <a class="btn btn-edit" href="newsfeed.html">Cancel Post</a>
