--- a/Question 1/newwalkevent.html
+++ b/Question 1/newwalkevent.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <link rel="stylesheet" href="res/css/q2a.css">
+  <link rel="stylesheet" href="res/css/style.css">
 </head>
 
 <body>
